--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
     <canvas id="myChart"></canvas>
   </div>
   <script>
-    const params = new URLSearchParams(window.location.search)
-    var config = '';
-    if (params.has('config')) {
-      config = params.get('config')
-      console.log(config, "config");
-    }
+    
+    var config = JSON.parse(decodeURI(window.location.href.split('?')[1].split('&')[0].split('=')[1]));
+    console.log(config,'config');
     var myChart = new Chart(
       document.getElementById('myChart'),
       config
