--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 
 <body>
-  <div height="1000">
-    <canvas id="myChart" height="1000"></canvas>
+  <div height="1000" width="320">
+    <canvas id="myChart" height="1000" width="320"></canvas>
   </div>
   <script>
     console.log(window.location.href,'location');
