--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
   <div height="450" width="320">
-    <canvas id="myChart"></canvas>
+    <canvas id="myChart" height="450" width="320"></canvas>
   </div>
   <script>
     console.log(window.location.href,'location');
