--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     
     var config = JSON.parse(decodeURI(window.location.href.split('?')[1].split('&')[0].split('=')[1]));
     console.log(config,'config');
-    var myChart = new Chart(
-      document.getElementById('myChart'),
+    var ctx=document.getElementById('myChart');
+    var myChart = new Chart(ctx,
       config
     );
   </script>
