--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.0.2/dist/chartjs-plugin-annotation.min.js"></script>
 </head>
 
 <body>
