--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <div height="450" width="320">
+  <div class="chart-container" style="position: relative; height:40vh; width:80vw">
     <canvas id="myChart"></canvas>
   </div>
   <script>
