--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.0.2/dist/chartjs-plugin-annotation.min.js"></script>
+  <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
 </head>
 
 <body>
-  <div class="chart-container" style="position: relative; height:40vh; width:80vw">
+  <div class="chart-container" style="position: relative; height:100vh; width:100vw">
     <canvas id="myChart"></canvas>
   </div>
   <script>
